Update all database layer
