# api/controllers/approval.js
@@ -3,35 +3,42 @@
 var util = require("util");
 var db = require("../../db/db");
 
-function getApprovals(req, res) {
-  db.approvals(function(approvals) {
-    res.json(approvals);
-  });
-}
-
-function selectApproval(req, res) {
-  var id = req.swagger.params.uid.value;
-  db.approval(id, function(approval) {
+function getApproval(req, res) {
+  var uid = req.swagger.params.uid.value;
+  db.get("approval", uid, function(approval) {
     res.json(approval);
   });
 }
 
+function allApprovals(req, res) {
+  db.all("approval", function(approvals) {
+    res.json(approvals);
+  });
+}
+
 function saveApproval(req, res) {
-  db.saveApproval(req.body, function() {
+  db.save("approval", req.body, function() {
     res.json({ success: 1, description: "Approval saved!" });
   });
 }
 
-function deleteApproval(req, res) {
-  var id = req.swagger.params.uid.value;
-  db.deleteApproval(id, function() {
-    res.json({ success: 1, description: "Approval deleted!" });
+function updateApproval(req, res) {
+  db.update("approval", req.body, function() {
+    res.json({ success: 1, description: "Approval updated!" });
+  });
+}
+
+function removeApproval(req, res) {
+  var uid = req.swagger.params.uid.value;
+  db.remove("approval", uid, function() {
+    res.json({ success: 1, description: "Approval removed!" });
   });
 }
 
 module.exports = {
-  getApprovals,
-  selectApproval,
+  getApproval,
+  allApprovals,
   saveApproval,
-  deleteApproval
+  updateApproval,
+  removeApproval
 };
